Bug 590176 - add pseudo SelectAccessible interface, r=marcoz, davidb, a=davidb
UltraBlame original commit: cbbccc115e555e4cc0b7aacd6c70b21131df87f7

--- a/accessible/tests/mochitest/selectable/test_aria.html
+++ b/accessible/tests/mochitest/selectable/test_aria.html
@@ -181,6 +181,30 @@ src
 .
 .
 /
+states
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
+.
+.
+/
 selectable
 .
 js
@@ -256,6 +280,87 @@ doTest
 (
 )
 {
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+list
+"
 var
 id
 =
@@ -282,6 +387,159 @@ for
 id
 )
 ;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+var
+select
+=
+getAccessible
+(
+id
+[
+nsIAccessibleSelectable
+]
+)
+;
+select
+.
+addChildToSelection
+(
+0
+)
+;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+select
+.
+removeChildFromSelection
+(
+0
+)
+;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+select
+.
+selectAllSelection
+(
+)
+;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+select
+.
+clearSelection
+(
+)
+;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+listbox
+"
 id
 =
 "
@@ -307,6 +565,97 @@ for
 id
 )
 ;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+listbox
+"
+aria
+-
+multiselectable
 id
 =
 "
@@ -332,6 +681,167 @@ for
 id
 )
 ;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+select
+=
+getAccessible
+(
+id
+[
+nsIAccessibleSelectable
+]
+)
+;
+select
+.
+addChildToSelection
+(
+0
+)
+;
+testSelectableSelection
+(
+id
+[
+"
+listbox2_item1
+"
+]
+)
+;
+select
+.
+removeChildFromSelection
+(
+0
+)
+;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+select
+.
+selectAllSelection
+(
+)
+;
+testSelectableSelection
+(
+id
+[
+"
+listbox2_item1
+"
+"
+listbox2_item2
+"
+]
+)
+;
+select
+.
+clearSelection
+(
+)
+;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+grid
+"
 id
 =
 "
@@ -357,6 +867,94 @@ for
 id
 )
 ;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+tree
+"
 id
 =
 "
@@ -382,6 +980,94 @@ for
 id
 )
 ;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+treegrid
+"
 id
 =
 "
@@ -407,22 +1093,129 @@ for
 id
 )
 ;
+testSelectableSelection
+(
+id
+[
+]
+)
+;
 /
 /
-Test
-selection
-methods
-for
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+/
+role
+=
+"
+grid
+"
+aria
+-
+multiselectable
 selectable
 children
 in
 subtree
-.
-testSelectable
-(
+id
+=
 "
 grid2
 "
+;
+ok
+(
+isAccessible
+(
+id
+[
+nsIAccessibleSelectable
+]
+)
+"
+No
+selectable
+accessible
+for
+"
++
+id
+)
+;
+testSelectable
+(
+id
 [
 "
 grid2_colhead1
@@ -571,6 +1364,53 @@ GetNextSibling
 Mozilla
 Bug
 566551
+<
+/
+a
+>
+<
+br
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+590176
+"
+title
+=
+"
+add
+pseudo
+SelectAccessible
+interface
+"
+>
+Mozilla
+Bug
+590176
 <
 /
 a
@@ -734,6 +1574,11 @@ role
 "
 listitem
 "
+id
+=
+"
+listbox2_item1
+"
 >
 item1
 <
@@ -746,6 +1591,11 @@ role
 =
 "
 listitem
+"
+id
+=
+"
+listbox2_item2
 "
 >
 item2
