--- a/accessible/tests/mochitest/tree/test_txtctrl.html
+++ b/accessible/tests/mochitest/tree/test_txtctrl.html
@@ -280,34 +280,8 @@ ROLE_TEXT_LEAF
 /
 /
 hello1
-text
-}
-{
-role
-:
-ROLE_WHITESPACE
-}
-{
-role
-:
-ROLE_TEXT_LEAF
-/
-/
-hello2
-text
-}
-{
-role
-:
-ROLE_WHITESPACE
-}
-{
-role
-:
-ROLE_TEXT_LEAF
-/
-/
-whitepsace
+\
+nhello2
 text
 }
 {
