Bug 591776 - Add user agent to about:support r=sdwilsh a=blocking2.0beta6+
UltraBlame original commit: af19a8b6501ae9879de7d4856bb47a1c51589f08

--- a/toolkit/content/aboutSupport.xhtml
+++ b/toolkit/content/aboutSupport.xhtml
@@ -841,6 +841,44 @@ column
 &
 aboutSupport
 .
+appBasicsUserAgent
+;
+<
+/
+th
+>
+<
+td
+id
+=
+"
+useragent
+-
+box
+"
+>
+<
+/
+td
+>
+<
+/
+tr
+>
+<
+tr
+>
+<
+th
+class
+=
+"
+column
+"
+>
+&
+aboutSupport
+.
 appBasicsProfileDir
 ;
 <
