Back out bug 240933 and bug 590554 because of reftest failure on Win7 and also bug 593211
UltraBlame original commit: 4235cd33ad433012678d87ca668203b67c48ad57

--- a/editor/libeditor/text/tests/test_texteditor_keyevent_handling.html
+++ b/editor/libeditor/text/tests/test_texteditor_keyevent_handling.html
@@ -2243,6 +2243,29 @@ aIsTabbable
 aIsReadonly
 )
 ;
+/
+/
+The
+tab
+char
+is
+converted
+to
+4
+space
+characters
+because
+textarea
+/
+input
+/
+/
+elements
+are
+not
+preformatted
+editor
+.
 is
 (
 aElement
@@ -2257,8 +2280,6 @@ aIsReadonly
 ?
 "
 a
-\
-t
 "
 :
 "
@@ -2289,111 +2310,6 @@ Tab
 "
 )
 ;
-/
-/
-If
-the
-editor
-is
-not
-tabbable
-make
-sure
-that
-it
-accepts
-tab
-characters
-/
-/
-even
-if
-it
-'
-s
-empty
-.
-if
-(
-!
-aIsTabbable
-&
-&
-!
-aIsReadonly
-)
-{
-reset
-(
-"
-"
-)
-;
-synthesizeKey
-(
-"
-VK_TAB
-"
-{
-}
-)
-;
-check
-(
-aDescription
-+
-"
-Tab
-on
-empty
-textarea
-"
-true
-true
-!
-aIsReadonly
-)
-;
-is
-(
-aElement
-.
-value
-"
-\
-t
-"
-aDescription
-+
-"
-Tab
-on
-empty
-textarea
-"
-)
-;
-is
-(
-fm
-.
-focusedElement
-aElement
-aDescription
-+
-"
-focus
-moved
-unexpectedly
-(
-Tab
-on
-empty
-textarea
-"
-)
-;
-}
 reset
 (
 "
