Bug 485288 - Update media load algorithm. r=roc a=blocking2.0
UltraBlame original commit: af64d768c0fd17e2dcf7aa749e58661ffd8025a5

--- a/content/media/test/test_info_leak.html
+++ b/content/media/test/test_info_leak.html
@@ -771,6 +771,12 @@ src
 =
 src
 ;
+gMedia
+.
+_name
+=
+src
+;
 document
 .
 body
@@ -881,6 +887,30 @@ msg
 )
 ;
 }
+}
+function
+filename
+(
+uri
+)
+{
+return
+uri
+.
+substr
+(
+uri
+.
+lastIndexOf
+(
+"
+/
+"
+)
++
+1
+)
+;
 }
 function
 checkState
@@ -1108,16 +1138,46 @@ null
 )
 )
 ;
-test_is
+test_ok
+(
+filename
 (
 gMedia
 .
 currentSrc
+)
+=
+=
+filename
+(
+gMedia
+.
+_name
+)
+|
+|
+gMedia
+.
+networkState
+=
+=
+HTMLMediaElement
+.
+NETWORK_NO_SOURCE
 "
-"
-"
-Leaked
 currentSrc
+should
+match
+candidate
+uri
+if
+we
+'
+ve
+got
+a
+valid
+source
 "
 )
 ;
