--- a/content/media/test/test_load.html
+++ b/content/media/test/test_load.html
@@ -750,6 +750,19 @@ should
 load
 the
 last
+/
+/
+and
+receive
+error
+events
+for
+failed
+loads
+on
+the
+source
+children
 .
 create
 :
@@ -796,6 +809,12 @@ expectedEvents
 [
 '
 loadstart
+'
+'
+error
+'
+'
+error
 '
 '
 durationchange
@@ -970,6 +989,9 @@ expectedEvents
 [
 '
 loadstart
+'
+'
+error
 '
 '
 error
