--- a/content/media/test/test_load_candidates.html
+++ b/content/media/test/test_load_candidates.html
@@ -240,26 +240,21 @@ evt
 .
 target
 ;
-is
+ok
 (
 v
 .
 _error
-false
 "
-Shouldn
-'
-t
+Should
 have
-thrown
+received
 an
 error
--
+event
+before
+loaded
 "
-+
-v
-.
-_name
 )
 ;
 v
@@ -303,14 +298,11 @@ evt
 .
 target
 .
+parentNode
+.
 _error
 =
 true
-;
-finish
-(
-evt
-)
 ;
 }
 var
@@ -454,6 +446,17 @@ test
 type
 ]
 ;
+s1
+.
+addEventListener
+(
+"
+error
+"
+errorHandler
+false
+)
+;
 v
 .
 appendChild
@@ -494,17 +497,6 @@ v
 appendChild
 (
 s2
-)
-;
-v
-.
-addEventListener
-(
-"
-error
-"
-errorHandler
-false
 )
 ;
 v
