--- a/content/media/test/test_preload_actions.html
+++ b/content/media/test/test_preload_actions.html
@@ -1225,6 +1225,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -1234,12 +1240,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 {
@@ -2329,6 +2329,28 @@ _finished
 =
 true
 ;
+is
+(
+v
+.
+_gotErrorEvent
+true
+"
+(
+7
+)
+Should
+get
+error
+event
+from
+first
+source
+load
+failure
+"
+)
+;
 maybeFinish
 (
 v
@@ -2368,6 +2390,12 @@ preload
 "
 none
 "
+;
+v
+.
+_gotErrorEvent
+=
+false
 ;
 v
 .
@@ -2436,6 +2464,34 @@ ended
 this
 .
 ended
+false
+)
+;
+v
+.
+addEventListener
+(
+"
+error
+"
+function
+(
+e
+)
+{
+v
+.
+_gotErrorEvent
+=
+true
+;
+e
+.
+stopPropagation
+(
+)
+;
+}
 false
 )
 ;
@@ -2751,6 +2807,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -2760,12 +2822,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 /
@@ -3012,6 +3068,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -3021,12 +3083,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 *
@@ -3189,6 +3245,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -3198,12 +3260,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 {
@@ -3406,6 +3462,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -3415,12 +3477,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 {
@@ -3611,6 +3667,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -3620,12 +3682,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 v
 .
 preload
@@ -3867,6 +3923,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -3876,12 +3938,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 v
 .
 preload
@@ -4349,6 +4405,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -4358,12 +4420,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 {
@@ -4467,6 +4523,12 @@ test
 .
 name
 ;
+/
+/
+Causes
+implicit
+load
+.
 document
 .
 body
@@ -4476,12 +4538,6 @@ appendChild
 v
 )
 ;
-/
-/
-Causes
-implicit
-load
-.
 }
 }
 {
