--- a/content/media/test/test_decoder_disable.html
+++ b/content/media/test/test_decoder_disable.html
@@ -190,6 +190,45 @@ application
 javascript
 "
 >
+function
+filename
+(
+uri
+)
+{
+return
+uri
+.
+substr
+(
+uri
+.
+lastIndexOf
+(
+"
+/
+"
+)
++
+1
+)
+;
+}
+function
+e
+(
+id
+)
+{
+return
+document
+.
+getElementById
+(
+id
+)
+;
+}
 netscape
 .
 security
@@ -350,9 +389,7 @@ finishTest
 {
 is
 (
-document
-.
-getElementById
+e
 (
 '
 video1
@@ -364,20 +401,28 @@ currentSrc
 "
 '
 video1
-.
 currentSrc
-=
-=
-"
-"
+should
+be
+empty
+when
+there
+\
+'
+s
+no
+playable
+typed
+source
+children
 '
 )
 ;
 is
 (
-document
-.
-getElementById
+filename
+(
+e
 (
 '
 video2
@@ -385,24 +430,32 @@ video2
 )
 .
 currentSrc
-"
-"
+)
+filename
+(
+e
+(
 '
 video2
+'
+)
 .
+src
+)
+'
+video2
 currentSrc
-=
-=
-"
-"
+should
+match
+src
 '
 )
 ;
 is
 (
-document
-.
-getElementById
+filename
+(
+e
 (
 '
 video3
@@ -410,16 +463,24 @@ video3
 )
 .
 currentSrc
-"
-"
+)
+filename
+(
+e
+(
 '
 video3
+'
+)
 .
+src
+)
+'
+video3
 currentSrc
-=
-=
-"
-"
+should
+match
+src
 '
 )
 ;
@@ -431,10 +492,15 @@ gLoadError
 video1
 '
 ]
-1
+2
 "
-Load
+Expect
+one
 error
+per
+invalid
+source
+child
 on
 video1
 "
@@ -450,7 +516,8 @@ video2
 ]
 1
 "
-Load
+Expect
+one
 error
 on
 video2
@@ -467,7 +534,8 @@ video3
 ]
 1
 "
-Load
+Expect
+one
 error
 on
 video3
@@ -545,9 +613,9 @@ gErrorCount
 if
 (
 gErrorCount
+>
 =
-=
-3
+4
 )
 {
 finishTest
@@ -614,6 +682,11 @@ r11025_u8_c1
 .
 wav
 "
+id
+=
+'
+s2
+'
 /
 >
 <
