--- a/content/media/test/test_source_write.html
+++ b/content/media/test/test_source_write.html
@@ -305,21 +305,20 @@ networkState
 =
 HTMLMediaElement
 .
-NETWORK_EMPTY
+NETWORK_NO_SOURCE
 "
 We
 shouldn
 '
 t
 start
-a
+network
 load
 until
 the
-video
-tag
-is
-closed
+current
+task
+returns
 .
 "
 )
