Bug 583863: Refactor <input> implementation to deal with files that are not on the disk. r=sicking a=blocking-fennec
UltraBlame original commit: af1365b24066529c6d01bb68505f951a2e10998b

--- a/content/base/test/test_bug345339.html
+++ b/content/base/test/test_bug345339.html
@@ -248,6 +248,9 @@ waitForExplicitFinish
 (
 )
 ;
+var
+filePath
+;
 function
 afterLoad
 (
@@ -338,9 +341,81 @@ PrivilegeManager
 enablePrivilege
 (
 "
-UniversalFileRead
+UniversalXPConnect
 "
 )
+;
+var
+file
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+file
+/
+directory_service
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIProperties
+)
+.
+get
+(
+"
+TmpD
+"
+Components
+.
+interfaces
+.
+nsILocalFile
+)
+;
+file
+.
+append
+(
+"
+345339_test
+.
+file
+"
+)
+;
+file
+.
+createUnique
+(
+Components
+.
+interfaces
+.
+nsIFile
+.
+NORMAL_FILE_TYPE
+0666
+)
+;
+filePath
+=
+file
+.
+path
 ;
 iframeDoc
 .
@@ -353,11 +428,7 @@ file
 .
 value
 =
-"
-dummyfile
-.
-txt
-"
+filePath
 ;
 /
 *
@@ -553,11 +624,7 @@ file
 )
 .
 value
-"
-dummyfile
-.
-txt
-"
+filePath
 "
 file
 field
