Backed out changeset af1365b24066
UltraBlame original commit: ecdaf3082610d2ab5cddd7ead73391c8ff176b3b

--- a/content/base/test/test_bug345339.html
+++ b/content/base/test/test_bug345339.html
@@ -248,9 +248,6 @@ waitForExplicitFinish
 (
 )
 ;
-var
-filePath
-;
 function
 afterLoad
 (
@@ -341,81 +338,9 @@ PrivilegeManager
 enablePrivilege
 (
 "
-UniversalXPConnect
+UniversalFileRead
 "
 )
-;
-var
-file
-=
-Components
-.
-classes
-[
-"
-mozilla
-.
-org
-/
-file
-/
-directory_service
-;
-1
-"
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIProperties
-)
-.
-get
-(
-"
-TmpD
-"
-Components
-.
-interfaces
-.
-nsILocalFile
-)
-;
-file
-.
-append
-(
-"
-345339_test
-.
-file
-"
-)
-;
-file
-.
-createUnique
-(
-Components
-.
-interfaces
-.
-nsIFile
-.
-NORMAL_FILE_TYPE
-0666
-)
-;
-filePath
-=
-file
-.
-path
 ;
 iframeDoc
 .
@@ -428,7 +353,11 @@ file
 .
 value
 =
-filePath
+"
+dummyfile
+.
+txt
+"
 ;
 /
 *
@@ -624,7 +553,11 @@ file
 )
 .
 value
-filePath
+"
+dummyfile
+.
+txt
+"
 "
 file
 field
