Bug 558072. Allow getting of popup position and size from popupshowing event. r=roc,a=blocking
UltraBlame original commit: e560e0fe90d17de4333d04d1b3eb213b81a63a1d

--- a/browser/base/content/test/test_contextmenu.html
+++ b/browser/base/content/test/test_contextmenu.html
@@ -3291,6 +3291,44 @@ XUL
 "
 )
 ;
+if
+(
+chromeWin
+.
+document
+.
+getElementById
+(
+"
+Browser
+:
+Stop
+"
+)
+.
+getAttribute
+(
+"
+disabled
+"
+)
+!
+=
+"
+true
+"
+)
+{
+SimpleTest
+.
+executeSoon
+(
+startTest
+)
+;
+return
+;
+}
 text
 =
 subwindow
