Bug 591104 - Mirrored images in about:robots are useless. r=mstange rs=dolske a=gavin
UltraBlame original commit: ac7ef72afa3432d3a72dd7eb03b24d1eca6b3420

--- a/browser/base/content/aboutRobots.xhtml
+++ b/browser/base/content/aboutRobots.xhtml
@@ -914,8 +914,10 @@ CDATA
 [
 #
 errorPageContainer
+:
+before
 {
-background
+content
 :
 url
 (
@@ -935,33 +937,20 @@ icon
 png
 '
 )
-left
-0
-no
--
-repeat
--
-moz
--
-Field
 ;
-background
--
-origin
+position
 :
-content
--
-box
+absolute
 ;
 }
+body
+[
+dir
+=
+rtl
+]
 #
-errorTrailerDescText
-{
-float
-:
-right
-;
-}
+icon
 body
 [
 dir
@@ -970,52 +959,19 @@ rtl
 ]
 #
 errorPageContainer
-{
-background
--
-image
 :
-url
+before
+{
+-
+moz
+-
+transform
+:
+scaleX
 (
-'
-chrome
-:
-/
-/
-browser
-/
-content
-/
-aboutRobots
 -
-icon
--
-rtl
-.
-png
-'
+1
 )
-;
-background
--
-position
-:
-right
-0
-;
-}
-body
-[
-dir
-=
-rtl
-]
-#
-errorTrailerDescText
-{
-float
-:
-left
 ;
 }
 ]
@@ -1396,7 +1352,7 @@ aboutRobots
 -
 widget
 -
-right
+left
 .
 png
 "
@@ -1416,6 +1372,17 @@ right
 :
 -
 10px
+;
+-
+moz
+-
+transform
+:
+scaleX
+(
+-
+1
+)
 ;
 "
 /
