Bug 514817: Update aboutRights content. r=sdwilsh, a=blocking-b6
UltraBlame original commit: c8bf9ce7050667f53c84d4f78d6a8aecd095f598

--- a/toolkit/content/aboutRights.xhtml
+++ b/toolkit/content/aboutRights.xhtml
@@ -822,6 +822,22 @@ rights
 .
 intro
 -
+point2
+.
+5
+;
+<
+/
+li
+>
+<
+li
+>
+&
+rights2
+.
+intro
+-
 point3a
 ;
 <
@@ -846,7 +862,7 @@ privacy
 "
 >
 &
-rights
+rights2
 .
 intro
 -
@@ -871,7 +887,7 @@ li
 li
 >
 &
-rights
+rights2
 .
 intro
 -
@@ -946,7 +962,7 @@ webservices
 h3
 >
 &
-rights
+rights2
 .
 webservices
 -
@@ -960,17 +976,36 @@ h3
 p
 >
 &
-rights
+rights2
 .
 webservices
 -
 a
 ;
 <
-code
+a
+href
+=
+"
+about
+:
+rights
+#
+disabling
+-
+webservices
+"
+onclick
+=
+"
+showDisablingServices
+(
+)
+;
+"
 >
 &
-rights
+rights2
 .
 webservices
 -
@@ -978,10 +1013,10 @@ b
 ;
 <
 /
-code
+a
 >
 &
-rights
+rights2
 .
 webservices
 -
@@ -990,6 +1025,239 @@ c
 <
 /
 p
+>
+<
+div
+id
+=
+"
+disabling
+-
+webservices
+-
+container
+"
+style
+=
+"
+margin
+-
+left
+:
+40px
+;
+"
+>
+<
+a
+name
+=
+"
+disabling
+-
+webservices
+"
+/
+>
+<
+p
+>
+<
+strong
+>
+&
+rights
+.
+safebrowsing
+-
+a
+;
+<
+/
+strong
+>
+&
+rights
+.
+safebrowsing
+-
+b
+;
+<
+/
+p
+>
+<
+ul
+>
+<
+li
+>
+&
+rights
+.
+safebrowsing
+-
+term1
+;
+<
+/
+li
+>
+<
+li
+>
+&
+rights
+.
+safebrowsing
+-
+term2
+;
+<
+/
+li
+>
+<
+li
+>
+&
+rights
+.
+safebrowsing
+-
+term3
+;
+<
+/
+li
+>
+<
+li
+>
+&
+rights
+.
+safebrowsing
+-
+term4
+;
+<
+/
+li
+>
+<
+/
+ul
+>
+<
+p
+>
+<
+strong
+>
+&
+rights
+.
+locationawarebrowsing
+-
+a
+;
+<
+/
+strong
+>
+&
+rights
+.
+locationawarebrowsing
+-
+b
+;
+<
+/
+p
+>
+<
+ul
+>
+<
+li
+>
+&
+rights
+.
+locationawarebrowsing
+-
+term1a
+;
+<
+code
+>
+&
+rights
+.
+locationawarebrowsing
+-
+term1b
+;
+<
+/
+code
+>
+<
+/
+li
+>
+<
+li
+>
+&
+rights
+.
+locationawarebrowsing
+-
+term2
+;
+<
+/
+li
+>
+<
+li
+>
+&
+rights
+.
+locationawarebrowsing
+-
+term3
+;
+<
+/
+li
+>
+<
+li
+>
+&
+rights
+.
+locationawarebrowsing
+-
+term4
+;
+<
+/
+li
+>
+<
+/
+ul
+>
+<
+/
+div
 >
 <
 ol
@@ -1011,7 +1279,7 @@ placeholder
 li
 >
 &
-rights
+rights2
 .
 webservices
 -
@@ -1039,7 +1307,7 @@ li
 li
 >
 &
-rights
+rights2
 .
 webservices
 -
@@ -1172,6 +1440,47 @@ showServices
 )
 {
 servicesDiv
+.
+style
+.
+display
+=
+"
+"
+;
+}
+var
+disablingServicesDiv
+=
+document
+.
+getElementById
+(
+"
+disabling
+-
+webservices
+-
+container
+"
+)
+;
+disablingServicesDiv
+.
+style
+.
+display
+=
+"
+none
+"
+;
+function
+showDisablingServices
+(
+)
+{
+disablingServicesDiv
 .
 style
 .
