Bug 592592 - Non-breaking spaces inserted when multiple spaces are typed, even in pre-wrap-styled text r,a=roc
UltraBlame original commit: 1499c617241b3654d96d01f2ef07c71b68fca147

--- a/content/html/content/test/test_bug408231.html
+++ b/content/html/content/test/test_bug408231.html
@@ -1320,6 +1320,20 @@ designMode
 on
 '
 ;
+window
+.
+getSelection
+(
+)
+.
+collapse
+(
+document
+.
+body
+0
+)
+;
 testQueryCommand
 (
 commandEnabledResults
