--- a/browser/base/content/tabview/tabview.html
+++ b/browser/base/content/tabview/tabview.html
@@ -161,6 +161,36 @@ true
 "
 >
 <
+input
+id
+=
+"
+exit
+-
+button
+"
+type
+=
+"
+image
+"
+onclick
+=
+"
+UI
+.
+onExitButtonPressed
+(
+)
+;
+"
+alt
+=
+"
+"
+/
+>
+<
 div
 id
 =
