--- a/editor/libeditor/html/tests/test_bug592592.html
+++ b/editor/libeditor/html/tests/test_bug592592.html
@@ -218,6 +218,36 @@ b
 div
 >
 <
+div
+id
+=
+"
+editor2
+"
+contenteditable
+=
+"
+true
+"
+style
+=
+"
+white
+-
+space
+:
+pre
+-
+wrap
+"
+>
+a
+b
+<
+/
+div
+>
+<
 /
 div
 >
@@ -454,6 +484,102 @@ non
 -
 preformatted
 text
+"
+)
+;
+ed
+=
+document
+.
+getElementById
+(
+"
+editor2
+"
+)
+;
+/
+/
+Put
+the
+selection
+after
+the
+second
+space
+in
+the
+second
+editable
+field
+ed
+.
+focus
+(
+)
+;
+window
+.
+getSelection
+(
+)
+.
+collapse
+(
+ed
+.
+firstChild
+3
+)
+;
+/
+/
+Press
+the
+back
+-
+space
+key
+synthesizeKey
+(
+"
+VK_BACK_SPACE
+"
+{
+}
+)
+;
+/
+/
+Make
+sure
+that
+we
+'
+ve
+only
+deleted
+a
+single
+space
+is
+(
+ed
+.
+innerHTML
+"
+a
+b
+"
+"
+We
+should
+only
+be
+deleting
+a
+single
+space
 "
 )
 ;
