Bug 592045 - Add Live Filter Search to Panorama [r=dietrich a=beltzner]
UltraBlame original commit: 264f954e402d8e01985e61f119d69b2286d9fe89

--- a/browser/base/content/tabview/tabview.html
+++ b/browser/base/content/tabview/tabview.html
@@ -173,7 +173,59 @@ div
 id
 =
 "
+actions
+"
+>
+<
+input
+type
+=
+"
+button
+"
+id
+=
+"
+searchbutton
+"
+/
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
 bg
+"
+/
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+search
+"
+>
+<
+input
+id
+=
+"
+searchbox
+"
+type
+=
+"
+text
 "
 /
 >
