Bug 369306 - Tests for bug 369306 and fixing broken tests. r=jst a2.0=test-only
UltraBlame original commit: 9c5a7e114cdafb44a2555a5f2f2c9724f22f393d

--- a/modules/plugin/test/mochitest/cocoa_window_focus.html
+++ b/modules/plugin/test/mochitest/cocoa_window_focus.html
@@ -443,11 +443,67 @@ were
 properly
 notified
 .
+/
+/
+Calling
 window
 .
 blur
 (
 )
+is
+not
+allowed
+.
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
+var
+fm
+=
+Components
+.
+classes
+[
+"
+mozilla
+.
+org
+/
+focus
+-
+manager
+;
+1
+"
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIFocusManager
+)
+;
+fm
+.
+focusedWindow
+=
+window
+.
+opener
 ;
 expectedEventCount
 +
