Bug 588999 - Add Tab Candy escape button to Tab Candy view [r+a=dietrich]
UltraBlame original commit: 4bc623a5570853ba5da99922f425cd3753b48f08

--- a/browser/base/content/tabview/tabview.html
+++ b/browser/base/content/tabview/tabview.html
@@ -169,6 +169,36 @@ content
 "
 >
 <
+input
+id
+=
+"
+exit
+-
+button
+"
+type
+=
+"
+image
+"
+onclick
+=
+"
+UI
+.
+onExitButtonPressed
+(
+)
+;
+"
+alt
+=
+"
+"
+/
+>
+<
 div
 id
 =
