--- a/content/html/content/test/test_bug500885.html
+++ b/content/html/content/test/test_bug500885.html
@@ -97,6 +97,32 @@ js
 script
 >
 <
+script
+type
+=
+"
+text
+/
+javascript
+"
+src
+=
+"
+/
+tests
+/
+SimpleTest
+/
+mockObjects
+.
+js
+"
+>
+<
+/
+script
+>
+<
 link
 rel
 =
@@ -209,88 +235,6 @@ enablePrivilege
 "
 UniversalXPConnect
 "
-)
-;
-const
-Cc
-=
-Components
-.
-classes
-;
-const
-Ci
-=
-Components
-.
-interfaces
-;
-const
-Cu
-=
-Components
-.
-utils
-;
-const
-Cm
-=
-Components
-.
-manager
-;
-Cc
-[
-"
-mozilla
-.
-org
-/
-moz
-/
-jssubscript
--
-loader
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-mozIJSSubScriptLoader
-)
-.
-loadSubScript
-(
-"
-chrome
-:
-/
-/
-mochikit
-/
-content
-/
-browser
-/
-toolkit
-/
-content
-/
-tests
-/
-browser
-/
-common
-/
-mockObjects
-.
-js
-"
-this
 )
 ;
 Cu
