--- a/modules/plugin/test/reftest/border-padding-3.html
+++ b/modules/plugin/test/reftest/border-padding-3.html
@@ -107,11 +107,77 @@ object
 <
 script
 >
+var
+prevPaintCount
+=
+0
+;
+function
+doTestWait
+(
+)
+{
+if
+(
+document
+.
+getElementById
+(
+"
+plugin
+"
+)
+.
+getPaintCount
+(
+)
+!
+=
+prevPaintCount
+)
+{
+document
+.
+documentElement
+.
+removeAttribute
+(
+'
+class
+'
+)
+;
+}
+else
+{
+setTimeout
+(
+doTestWait
+0
+)
+;
+}
+}
 function
 doTest
 (
 )
 {
+prevPaintCount
+=
+document
+.
+getElementById
+(
+"
+plugin
+"
+)
+.
+getPaintCount
+(
+)
+;
 document
 .
 getElementById
@@ -128,15 +194,10 @@ FFFF80FF
 "
 )
 ;
-document
-.
-documentElement
-.
-removeAttribute
+setTimeout
 (
-'
-class
-'
+doTestWait
+0
 )
 ;
 }
