--- a/browser/base/content/aboutHome.xhtml
+++ b/browser/base/content/aboutHome.xhtml
@@ -860,6 +860,70 @@ div
 id
 =
 "
+defaultSnippets
+"
+>
+<
+span
+hidden
+=
+"
+true
+"
+>
+&
+abouthome
+.
+defaultSnippet1
+.
+v1
+;
+<
+/
+span
+>
+<
+span
+hidden
+=
+"
+true
+"
+>
+&
+abouthome
+.
+defaultSnippet2
+.
+v1
+;
+<
+/
+span
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+snippets
+"
+hidden
+=
+"
+true
+"
+/
+>
+<
+div
+id
+=
+"
 bottomSection
 "
 >
