--- a/content/media/test/test_progress.html
+++ b/content/media/test/test_progress.html
@@ -204,6 +204,82 @@ v
 _name
 )
 ;
+ok
+(
+e
+.
+lengthComputable
+"
+Check
+progress
+lengthComputable
+for
+"
++
+v
+.
+_name
+)
+;
+v
+.
+_last_progress_total
+=
+e
+.
+loaded
+;
+ok
+(
+e
+.
+loaded
+<
+=
+e
+.
+total
+"
+Check
+progress
+in
+bounds
+:
+"
++
+e
+.
+loaded
++
+"
+for
+"
++
+v
+.
+_name
+)
+;
+is
+(
+e
+.
+total
+v
+.
+_size
+"
+Check
+progress
+total
+for
+"
++
+v
+.
+_name
+)
+;
 }
 function
 do_ended
@@ -339,9 +415,23 @@ name
 ;
 v
 .
+_size
+=
+test
+.
+size
+;
+v
+.
 _finished
 =
 false
+;
+v
+.
+_last_progress_total
+=
+0
 ;
 v
 .
