--- a/content/media/test/test_play_events.html
+++ b/content/media/test/test_play_events.html
@@ -258,6 +258,130 @@ for
 v
 .
 src
++
+"
+uneval
+(
+event
+.
+type
+)
+=
+"
++
+uneval
+(
+event
+.
+type
+)
++
+"
+typeof
+(
+event
+.
+type
+)
+=
+"
++
+typeof
+(
+event
+.
+type
+)
++
+"
+uneval
+(
+v
+.
+_state
+)
+=
+"
++
+uneval
+(
+v
+.
+_state
+)
++
+"
+typeof
+(
+v
+.
+_state
+)
+=
+"
++
+typeof
+(
+v
+.
+_state
+)
++
+"
+tokens
+[
+"
++
+v
+.
+_state
++
+"
+]
+=
+"
++
+tokens
+[
+v
+.
+_state
+]
++
+"
+tokens
+[
+"
++
+v
+.
+_state
++
+"
+]
+.
+indexOf
+(
+event
+.
+type
+)
+=
+"
++
+tokens
+[
+v
+.
+_state
+]
+.
+indexOf
+(
+event
+.
+type
+)
 )
 ;
 v
