b=593850; [webgl] remove bogus webgl debug utils from tests; r=bjacob
UltraBlame original commit: 97e3f3152c536a35d7dc24e5d78f889eade9bff6

--- a/content/canvas/test/webgl/conformance/texture-formats-test.html
+++ b/content/canvas/test/webgl/conformance/texture-formats-test.html
@@ -436,12 +436,25 @@ exists
 "
 )
 ;
+if
+(
+"
+WebGLDebugUtils
+"
+in
+window
+)
 WebGLDebugUtils
 .
 init
 (
 gl
 )
+;
+else
+WebGLDebugUtils
+=
+false
 ;
 debug
 (
@@ -1230,11 +1243,15 @@ var
 typeName
 =
 WebGLDebugUtils
+?
+WebGLDebugUtils
 .
 glEnumToString
 (
 type
 )
+:
+type
 ;
 debug
 (
