--- a/editor/libeditor/text/tests/test_texteditor_keyevent_handling.html
+++ b/editor/libeditor/text/tests/test_texteditor_keyevent_handling.html
@@ -2289,6 +2289,111 @@ Tab
 "
 )
 ;
+/
+/
+If
+the
+editor
+is
+not
+tabbable
+make
+sure
+that
+it
+accepts
+tab
+characters
+/
+/
+even
+if
+it
+'
+s
+empty
+.
+if
+(
+!
+aIsTabbable
+&
+&
+!
+aIsReadonly
+)
+{
+reset
+(
+"
+"
+)
+;
+synthesizeKey
+(
+"
+VK_TAB
+"
+{
+}
+)
+;
+check
+(
+aDescription
++
+"
+Tab
+on
+empty
+textarea
+"
+true
+true
+!
+aIsReadonly
+)
+;
+is
+(
+aElement
+.
+value
+"
+\
+t
+"
+aDescription
++
+"
+Tab
+on
+empty
+textarea
+"
+)
+;
+is
+(
+fm
+.
+focusedElement
+aElement
+aDescription
++
+"
+focus
+moved
+unexpectedly
+(
+Tab
+on
+empty
+textarea
+"
+)
+;
+}
 reset
 (
 "
