Bug 596385: Update FormData to latest spec. r=jst a=blocker
UltraBlame original commit: 7fff69efb85e345fa1792d042bcfc28b26f3f13a

--- a/content/html/content/test/test_formSubmission.html
+++ b/content/html/content/test/test_formSubmission.html
@@ -7676,10 +7676,10 @@ xhr
 .
 send
 (
-form
-.
-getFormData
+new
+FormData
 (
+form
 )
 )
 ;
@@ -7757,10 +7757,10 @@ xhr
 .
 send
 (
-form
-.
-getFormData
+new
+FormData
 (
+form
 )
 )
 ;
@@ -7920,10 +7920,10 @@ using
 FormData
 fd
 =
-form
-.
-getFormData
+new
+FormData
 (
+form
 )
 ;
 addToFormData
