Bug 596385: Update syntax for getting an url for a File to latest spec. r=jst a=blocker
UltraBlame original commit: 1cfb952b69be6f443aab52049e8b75c4912895e2

--- a/content/base/test/test_bug543870.html
+++ b/content/base/test/test_bug543870.html
@@ -39,9 +39,8 @@ title
 >
 Test
 for
-Cross
-Site
-XMLHttpRequest
+File
+urls
 <
 /
 title
@@ -401,13 +400,19 @@ jpg
 "
 )
 ;
+var
+fileurl
+=
+createBlobURL
+(
+file
+)
+;
 img
 .
 src
 =
-file
-.
-url
+fileurl
 ;
 var
 e
@@ -456,6 +461,167 @@ height
 ;
 /
 /
+Revoke
+url
+and
+attempt
+to
+load
+a
+image
+in
+this
+document
+img
+.
+src
+=
+"
+file_bug543870_img
+.
+jpg
+"
+;
+is
+(
+(
+yield
+)
+.
+type
+"
+load
+"
+"
+successfull
+reset
+image
+"
+)
+;
+revokeBlobURL
+(
+fileurl
+)
+;
+todo
+(
+false
+"
+urls
+need
+to
+act
+like
+404s
+not
+fail
+to
+parse
+"
+)
+;
+/
+*
+img
+.
+src
+=
+fileurl
+;
+var
+e
+=
+(
+yield
+)
+;
+is
+(
+e
+.
+type
+"
+error
+"
+"
+failed
+successfully
+"
+)
+;
+isnot
+(
+img
+.
+width
+120
+"
+correct
+error
+width
+"
+)
+;
+isnot
+(
+img
+.
+height
+90
+"
+correct
+error
+height
+"
+)
+;
+*
+/
+/
+/
+Generate
+new
+fileurl
+and
+make
+sure
+it
+'
+s
+different
+from
+the
+old
+var
+oldFileurl
+=
+fileurl
+;
+var
+fileurl
+=
+createBlobURL
+(
+file
+)
+;
+isnot
+(
+fileurl
+oldFileurl
+"
+createBlobURL
+generated
+the
+same
+url
+twice
+"
+)
+;
+/
+/
 Attempt
 to
 load
@@ -489,9 +655,7 @@ stringify
 {
 img
 :
-file
-.
-url
+fileurl
 }
 )
 "
@@ -579,9 +743,7 @@ stringify
 {
 img
 :
-file
-.
-url
+fileurl
 }
 )
 "
@@ -784,13 +946,18 @@ html
 "
 )
 ;
+fileurl
+=
+createBlobURL
+(
+file
+)
+;
 iframe
 .
 src
 =
-file
-.
-url
+fileurl
 ;
 yield
 ;
@@ -1020,9 +1187,7 @@ stringify
 {
 iframe
 :
-file
-.
-url
+fileurl
 }
 )
 "
@@ -1140,9 +1305,7 @@ stringify
 {
 iframe
 :
-file
-.
-url
+fileurl
 }
 )
 "
@@ -1192,6 +1355,13 @@ txt
 "
 )
 ;
+fileurl
+=
+createBlobURL
+(
+file
+)
+;
 xhr
 =
 new
@@ -1224,9 +1394,7 @@ open
 "
 GET
 "
-file
-.
-url
+fileurl
 )
 ;
 xhr
@@ -1321,9 +1489,7 @@ stringify
 {
 xhr
 :
-file
-.
-url
+fileurl
 }
 )
 "
@@ -1419,9 +1585,7 @@ stringify
 {
 xhr
 :
-file
-.
-url
+fileurl
 }
 )
 "
