Fixing bug 61098. Give users a way out of inifinite modal dialog loops. Original patch by Nochum Sossonko. r=jonassicking.cc a=beta7+
UltraBlame original commit: e036427942ff29f09aa0048920e373b00621a781

--- a/dom/tests/mochitest/bugs/test_bug504862.html
+++ b/dom/tests/mochitest/bugs/test_bug504862.html
@@ -104,6 +104,13 @@ head
 >
 <
 body
+onload
+=
+"
+runTest
+(
+)
+"
 >
 <
 a
@@ -166,6 +173,12 @@ Bug
 *
 *
 /
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
 function
 onMsgRcv
 (
@@ -193,6 +206,24 @@ arguments
 )
 ;
 }
+function
+runTest
+(
+)
+{
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+"
+UniversalXPConnect
+"
+)
+;
 window
 .
 addEventListener
@@ -347,6 +378,13 @@ dialog
 "
 )
 ;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 <
 /
 script
