Bug 591981 - Make script-inserted inline scripts run right away, make script-inserted external scripts behave like async scripts and make document.write writing an inline script return at a predictable time. r=jonas, a=blocking2.0-beta7.
UltraBlame original commit: 0ab712643a66d6adabc32f6375caca032f9000a1

--- a/content/base/test/test_bug28293.xhtml
+++ b/content/base/test/test_bug28293.xhtml
@@ -137,6 +137,10 @@ css
 <
 script
 >
+scriptInsertedExternalExecuted
+=
+false
+;
 res
 =
 '
@@ -222,50 +226,6 @@ script
 ;
 s
 .
-src
-=
-"
-file_bug28293
-.
-sjs
-?
-res
-+
-=
-'
-h
-'
-;
-"
-;
-s
-.
-defer
-=
-true
-;
-document
-.
-body
-.
-appendChild
-(
-s
-)
-;
-s
-=
-document
-.
-createElement
-(
-'
-script
-'
-)
-;
-s
-.
 textContent
 =
 "
@@ -313,7 +273,7 @@ is
 (
 res
 "
-AacBCDEFGeHIJfbd1M2g34hi
+AacBCDEFGeHIJb1M2g3i
 "
 "
 scripts
@@ -327,14 +287,14 @@ order
 ;
 ok
 (
-!
-fHadExecuted
+scriptInsertedExternalExecuted
 "
 Dynamic
 script
-executed
-too
-late
+did
+not
+block
+load
 "
 )
 ;
@@ -480,50 +440,6 @@ res
 '
 C
 '
-;
-s
-=
-document
-.
-createElement
-(
-'
-script
-'
-)
-;
-s
-.
-src
-=
-"
-file_bug28293
-.
-sjs
-?
-res
-+
-=
-'
-d
-'
-;
-"
-;
-s
-.
-defer
-=
-true
-;
-document
-.
-body
-.
-appendChild
-(
-s
-)
 ;
 s
 =
@@ -726,21 +642,9 @@ file_bug28293
 .
 sjs
 ?
-fHadExecuted
+scriptInsertedExternalExecuted
 =
-(
-res
-.
-indexOf
-(
-'
-f
-'
-)
->
-=
-0
-)
+true
 ;
 "
 ;
@@ -763,25 +667,6 @@ J
 ]
 ]
 >
-<
-/
-script
->
-<
-script
-defer
-=
-"
-defer
-"
->
-res
-+
-=
-'
-f
-'
-;
 <
 /
 script
