--- a/content/html/content/test/test_bug300691-2.html
+++ b/content/html/content/test/test_bug300691-2.html
@@ -104,6 +104,14 @@ head
 >
 <
 body
+onload
+=
+"
+done
+(
+)
+;
+"
 >
 <
 a
@@ -190,6 +198,12 @@ text
 javascript
 "
 >
+SimpleTest
+.
+waitForExplicitFinish
+(
+)
+;
 /
 /
 First
@@ -1236,6 +1250,11 @@ text
 javascript
 "
 >
+function
+done
+(
+)
+{
 is
 (
 test1Ran
@@ -1441,6 +1460,13 @@ been
 "
 )
 ;
+SimpleTest
+.
+finish
+(
+)
+;
+}
 <
 /
 script
