--- a/content/base/test/test_bug28293.html
+++ b/content/base/test/test_bug28293.html
@@ -101,6 +101,10 @@ css
 <
 script
 >
+scriptInsertedExternalExecuted
+=
+false
+;
 res
 =
 '
@@ -186,50 +190,6 @@ script
 ;
 s
 .
-src
-=
-"
-file_bug28293
-.
-sjs
-?
-res
-+
-=
-'
-h
-'
-;
-"
-;
-s
-.
-defer
-=
-true
-;
-document
-.
-body
-.
-appendChild
-(
-s
-)
-;
-s
-=
-document
-.
-createElement
-(
-'
-script
-'
-)
-;
-s
-.
 textContent
 =
 "
@@ -277,7 +237,7 @@ is
 (
 res
 "
-AacBCDEFGeHIJfbd1M2g34hi
+AacBCDEFGeHIJb1M2g3i
 "
 "
 scripts
@@ -291,14 +251,14 @@ order
 ;
 ok
 (
-!
-fHadExecuted
+scriptInsertedExternalExecuted
 "
 Dynamic
 script
-executed
-too
-late
+did
+not
+block
+load
 "
 )
 ;
@@ -432,50 +392,6 @@ res
 '
 C
 '
-;
-s
-=
-document
-.
-createElement
-(
-'
-script
-'
-)
-;
-s
-.
-src
-=
-"
-file_bug28293
-.
-sjs
-?
-res
-+
-=
-'
-d
-'
-;
-"
-;
-s
-.
-defer
-=
-true
-;
-document
-.
-body
-.
-appendChild
-(
-s
-)
 ;
 s
 =
@@ -669,21 +585,9 @@ file_bug28293
 .
 sjs
 ?
-fHadExecuted
+scriptInsertedExternalExecuted
 =
-(
-res
-.
-indexOf
-(
-'
-f
-'
-)
->
-=
-0
-)
+true
 ;
 "
 ;
@@ -701,21 +605,6 @@ res
 =
 '
 J
-'
-;
-<
-/
-script
->
-<
-script
-defer
->
-res
-+
-=
-'
-f
 '
 ;
 <
