--- a/dom/tests/mochitest/bugs/test_bug260264.html
+++ b/dom/tests/mochitest/bugs/test_bug260264.html
@@ -82,6 +82,32 @@ javascript
 src
 =
 "
+/
+tests
+/
+SimpleTest
+/
+EventUtils
+.
+js
+"
+>
+<
+/
+script
+>
+<
+script
+type
+=
+"
+application
+/
+javascript
+"
+src
+=
+"
 utils_bug260264
 .
 js
