Bug 596566 - Sync UI: Text for the physical Sync Key artifact. r=mconnor a=blocking-beta7
UltraBlame original commit: a03d65efc8242d1fabd71db59b8420a03a1f5922

--- a/browser/base/content/syncKey.xhtml
+++ b/browser/base/content/syncKey.xhtml
@@ -452,7 +452,7 @@ htmlDTD
 !
 ENTITY
 %
-syncSetupDTD
+syncBrandDTD
 SYSTEM
 "
 chrome
@@ -463,13 +463,36 @@ browser
 /
 locale
 /
-syncSetup
+syncBrand
 .
 dtd
 "
 >
 %
-syncSetupDTD
+syncBrandDTD
+;
+<
+!
+ENTITY
+%
+syncKeyDTD
+SYSTEM
+"
+chrome
+:
+/
+/
+browser
+/
+locale
+/
+syncKey
+.
+dtd
+"
+>
+%
+syncKeyDTD
 ;
 ]
 >
@@ -500,9 +523,9 @@ head
 title
 >
 &
-page
+syncKey
 .
-syncKeyBackup
+page
 .
 title
 ;
@@ -530,6 +553,41 @@ size
 150
 %
 }
+footer
+{
+font
+-
+size
+:
+70
+%
+}
+#
+Bug
+575675
+:
+Need
+to
+have
+an
+a
+:
+visited
+rule
+in
+a
+chrome
+document
+.
+a
+:
+visited
+{
+color
+:
+purple
+;
+}
 <
 /
 style
@@ -545,9 +603,9 @@ body
 h1
 >
 &
-page
+syncKey
 .
-syncKeyBackup
+page
 .
 title
 ;
@@ -572,15 +630,244 @@ p
 p
 >
 &
+syncKey
+.
 page
 .
-syncKeyBackup
-.
-descr
+description
 ;
 <
 /
 p
+>
+<
+div
+id
+=
+"
+column1
+"
+>
+<
+h2
+>
+&
+syncKey
+.
+keepItSecret
+.
+heading
+;
+<
+/
+h2
+>
+<
+p
+>
+&
+syncKey
+.
+keepItSecret
+.
+description
+;
+<
+/
+p
+>
+<
+/
+div
+>
+<
+div
+id
+=
+"
+column2
+"
+>
+<
+h2
+>
+&
+syncKey
+.
+keepItSafe
+.
+heading
+;
+<
+/
+h2
+>
+<
+p
+>
+<
+em
+>
+&
+syncKey
+.
+keepItSafe1
+.
+description
+;
+<
+/
+em
+>
+&
+syncKey
+.
+keepItSafe2
+.
+description
+;
+<
+em
+>
+&
+syncKey
+.
+keepItSafe3
+.
+description
+;
+<
+/
+em
+>
+&
+syncKey
+.
+keepItSafe4
+.
+description
+;
+<
+/
+p
+>
+<
+/
+div
+>
+<
+p
+>
+&
+syncKey
+.
+findOutMore1
+.
+label
+;
+<
+a
+href
+=
+"
+https
+:
+/
+/
+services
+.
+mozilla
+.
+com
+"
+>
+https
+:
+/
+/
+services
+.
+mozilla
+.
+com
+<
+/
+a
+>
+&
+syncKey
+.
+findOutMore2
+.
+label
+;
+<
+/
+p
+>
+<
+footer
+>
+&
+syncKey
+.
+footer1
+.
+label
+;
+<
+a
+id
+=
+"
+tosLink
+"
+href
+=
+"
+termsURL
+"
+>
+termsURL
+<
+/
+a
+>
+&
+syncKey
+.
+footer2
+.
+label
+;
+<
+a
+id
+=
+"
+ppLink
+"
+href
+=
+"
+privacyURL
+"
+>
+privacyURL
+<
+/
+a
+>
+&
+syncKey
+.
+footer3
+.
+label
+;
+<
+/
+footer
 >
 <
 /
