Bug 587931: Don't fire error if a <script> is canceled. r=mrbkap a=jst
UltraBlame original commit: 6ac2d9151492d92e5dc26f8104d2bad81b22f41b

--- a/content/base/test/test_bug587931.html
+++ b/content/base/test/test_bug587931.html
@@ -568,16 +568,6 @@ firedAfterScriptExecuteForCancel
 true
 ;
 "
-onload
-=
-"
-window
-.
-firedLoadForCancel
-=
-true
-;
-"
 >
 ok
 (
@@ -609,11 +599,82 @@ executed
 "
 )
 ;
+<
+/
+script
+>
+<
+script
+onbeforescriptexecute
+=
+"
+return
+false
+;
+"
+onafterescriptexecute
+=
+"
+window
+.
+extFiredAfterScriptExecuteForCancel
+=
+true
+;
+"
+onload
+=
+"
+window
+.
+extFiredLoadForCancel
+=
+true
+;
+"
+src
+=
+"
+data
+:
+text
+/
+plain
+ok
+(
+false
+'
+should
+have
+been
+canceled
+'
+)
+;
+"
+>
+<
+/
+script
+>
+<
+script
+>
 isnot
 (
 window
 .
-firedLoadForCancel
+extFiredAfterScriptExecuteForCancel
+true
+"
+onafterscriptexecute
+executed
+"
+)
+;
+is
+(
+extFiredLoadForCancel
 true
 "
 onload
