Bug 596636 - [SeaMonkey 2.1] TEST-UNEXPECTED-FAIL | /tests/content/html/content/test/test_bug589696.html | submit event should not be sent r=mounir.lamouri a=testing
UltraBlame original commit: 87b8633ad8ca6627bc4efbf85ea597a059c07fba

--- a/content/html/content/test/test_bug589696.html
+++ b/content/html/content/test/test_bug589696.html
@@ -715,6 +715,60 @@ button
 '
 )
 ;
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+var
+os
+=
+Components
+.
+classes
+[
+'
+mozilla
+.
+org
+/
+observer
+-
+service
+;
+1
+'
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIObserverService
+)
+;
+var
+observers
+=
+os
+.
+enumerateObservers
+(
+"
+invalidformsubmit
+"
+)
+;
 /
 *
 *
@@ -739,42 +793,47 @@ form
 .
 *
 *
-NOTE
-:
+The
+following
+test
+should
+not
+be
+done
 if
 there
 is
 no
-invalidformsubmit
 observer
+for
+*
+"
+invalidformsubmit
+"
+because
 the
 form
 submission
 will
-*
-never
-be
-blocked
-and
-this
-test
-might
-be
-a
-false
--
-positive
-but
-that
-should
 not
-*
 be
-a
-problem
+canceled
+in
+that
+*
+case
 .
 *
 /
+if
+(
+observers
+.
+hasMoreElements
+(
+)
+)
+{
 document
 .
 getElementById
@@ -1190,8 +1249,9 @@ of
 them
 should
 be
-catched
+caught
 if
+*
 sent
 .
 *
@@ -1451,6 +1511,7 @@ click
 }
 )
 ;
+}
 <
 /
 script
