--- a/editor/libeditor/html/tests/test_bug520189.html
+++ b/editor/libeditor/html/tests/test_bug520189.html
@@ -908,6 +908,42 @@ true
 div
 >
 <
+iframe
+id
+=
+"
+oo
+"
+src
+=
+"
+about
+:
+blank
+"
+>
+<
+/
+iframe
+>
+<
+div
+id
+=
+"
+pp
+"
+contenteditable
+=
+"
+true
+"
+>
+<
+/
+div
+>
+<
 /
 div
 >
@@ -1758,6 +1794,30 @@ png
 "
 >
 baz
+"
+;
+const
+validDataFooPayload
+=
+"
+foo
+<
+span
+data
+-
+bar
+=
+\
+"
+value
+\
+"
+>
+baz
+<
+/
+span
+>
 "
 ;
 var
@@ -3877,6 +3937,117 @@ text
 )
 ;
 }
+}
+{
+id
+:
+"
+oo
+"
+isIFrame
+:
+true
+payload
+:
+validDataFooPayload
+rootElement
+:
+function
+(
+)
+document
+.
+getElementById
+(
+"
+oo
+"
+)
+.
+contentDocument
+.
+documentElement
+checkResult
+:
+function
+(
+html
+)
+isnot
+(
+html
+.
+indexOf
+(
+"
+bar
+"
+)
+-
+1
+"
+Should
+have
+retained
+the
+data
+-
+bar
+attribute
+"
+)
+}
+{
+id
+:
+"
+pp
+"
+payload
+:
+validDataFooPayload
+rootElement
+:
+function
+(
+)
+document
+.
+getElementById
+(
+"
+pp
+"
+)
+checkResult
+:
+function
+(
+html
+)
+isnot
+(
+html
+.
+indexOf
+(
+"
+bar
+"
+)
+-
+1
+"
+Should
+have
+retained
+the
+data
+-
+bar
+attribute
+"
+)
 }
 ]
 ;
