Back out bug 591981 to see if it caused a performance regression. a=backout
UltraBlame original commit: 2b4ecab1e93a0631ef8fa068cac48e8f0bb436aa

--- a/content/base/test/test_bug28293.xhtml
+++ b/content/base/test/test_bug28293.xhtml
@@ -137,10 +137,6 @@ css
 <
 script
 >
-scriptInsertedExternalExecuted
-=
-false
-;
 res
 =
 '
@@ -226,6 +222,50 @@ script
 ;
 s
 .
+src
+=
+"
+file_bug28293
+.
+sjs
+?
+res
++
+=
+'
+h
+'
+;
+"
+;
+s
+.
+defer
+=
+true
+;
+document
+.
+body
+.
+appendChild
+(
+s
+)
+;
+s
+=
+document
+.
+createElement
+(
+'
+script
+'
+)
+;
+s
+.
 textContent
 =
 "
@@ -273,7 +313,7 @@ is
 (
 res
 "
-AacBCDEFGeHIJb1M2g3i
+AacBCDEFGeHIJfbd1M2g34hi
 "
 "
 scripts
@@ -287,14 +327,14 @@ order
 ;
 ok
 (
-scriptInsertedExternalExecuted
+!
+fHadExecuted
 "
 Dynamic
 script
-did
-not
-block
-load
+executed
+too
+late
 "
 )
 ;
@@ -440,6 +480,50 @@ res
 '
 C
 '
+;
+s
+=
+document
+.
+createElement
+(
+'
+script
+'
+)
+;
+s
+.
+src
+=
+"
+file_bug28293
+.
+sjs
+?
+res
++
+=
+'
+d
+'
+;
+"
+;
+s
+.
+defer
+=
+true
+;
+document
+.
+body
+.
+appendChild
+(
+s
+)
 ;
 s
 =
@@ -642,9 +726,21 @@ file_bug28293
 .
 sjs
 ?
-scriptInsertedExternalExecuted
+fHadExecuted
 =
-true
+(
+res
+.
+indexOf
+(
+'
+f
+'
+)
+>
+=
+0
+)
 ;
 "
 ;
@@ -667,6 +763,25 @@ J
 ]
 ]
 >
+<
+/
+script
+>
+<
+script
+defer
+=
+"
+defer
+"
+>
+res
++
+=
+'
+f
+'
+;
 <
 /
 script
