--- a/content/base/test/test_bug28293.html
+++ b/content/base/test/test_bug28293.html
@@ -101,10 +101,6 @@ css
 <
 script
 >
-scriptInsertedExternalExecuted
-=
-false
-;
 res
 =
 '
@@ -190,6 +186,50 @@ script
 ;
 s
 .
+src
+=
+"
+file_bug28293
+.
+sjs
+?
+res
++
+=
+'
+h
+'
+;
+"
+;
+s
+.
+defer
+=
+true
+;
+document
+.
+body
+.
+appendChild
+(
+s
+)
+;
+s
+=
+document
+.
+createElement
+(
+'
+script
+'
+)
+;
+s
+.
 textContent
 =
 "
@@ -237,7 +277,7 @@ is
 (
 res
 "
-AacBCDEFGeHIJb1M2g3i
+AacBCDEFGeHIJfbd1M2g34hi
 "
 "
 scripts
@@ -251,14 +291,14 @@ order
 ;
 ok
 (
-scriptInsertedExternalExecuted
+!
+fHadExecuted
 "
 Dynamic
 script
-did
-not
-block
-load
+executed
+too
+late
 "
 )
 ;
@@ -392,6 +432,50 @@ res
 '
 C
 '
+;
+s
+=
+document
+.
+createElement
+(
+'
+script
+'
+)
+;
+s
+.
+src
+=
+"
+file_bug28293
+.
+sjs
+?
+res
++
+=
+'
+d
+'
+;
+"
+;
+s
+.
+defer
+=
+true
+;
+document
+.
+body
+.
+appendChild
+(
+s
+)
 ;
 s
 =
@@ -585,9 +669,21 @@ file_bug28293
 .
 sjs
 ?
-scriptInsertedExternalExecuted
+fHadExecuted
 =
-true
+(
+res
+.
+indexOf
+(
+'
+f
+'
+)
+>
+=
+0
+)
 ;
 "
 ;
@@ -605,6 +701,21 @@ res
 =
 '
 J
+'
+;
+<
+/
+script
+>
+<
+script
+defer
+>
+res
++
+=
+'
+f
 '
 ;
 <
