Bug 596762: Allow specification of differing IPC preferences for each architecture in a universal binary. r=josh a=blocking-b7
UltraBlame original commit: c06ef0414fee2ae6ae41b8a4a13c62c132a7e780

--- a/modules/plugin/test/mochitest/test_GCrace.html
+++ b/modules/plugin/test/mochitest/test_GCrace.html
@@ -167,64 +167,13 @@ start
 (
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-var
-prefs
-=
-Components
-.
-classes
-[
-'
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-'
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
 if
 (
 !
-prefs
+SimpleTest
 .
-getBoolPref
+areOOPPenabled
 (
-'
-dom
-.
-ipc
-.
-plugins
-.
-enabled
-'
 )
 )
 {
