--- a/modules/plugin/test/mochitest/test_crashing2.html
+++ b/modules/plugin/test/mochitest/test_crashing2.html
@@ -137,64 +137,13 @@ mainLoaded
 (
 )
 {
-netscape
-.
-security
-.
-PrivilegeManager
-.
-enablePrivilege
-(
-'
-UniversalXPConnect
-'
-)
-;
-var
-prefs
-=
-Components
-.
-classes
-[
-'
-mozilla
-.
-org
-/
-preferences
--
-service
-;
-1
-'
-]
-.
-getService
-(
-Components
-.
-interfaces
-.
-nsIPrefBranch
-)
-;
 if
 (
 !
-prefs
+SimpleTest
 .
-getBoolPref
+areOOPPenabled
 (
-'
-dom
-.
-ipc
-.
-plugins
-.
-enabled
-'
 )
 )
 {
