Bug 593125 - Reword offline error text in the content area message r=dolske a=blocking
UltraBlame original commit: e6f66ee57044b36fdf99ee36edc58b8db12f98a9

--- a/docshell/resources/content/netError.xhtml
+++ b/docshell/resources/content/netError.xhtml
@@ -83,6 +83,36 @@ netErrorDTD
 ;
 <
 !
+-
+-
+Fallback
+in
+case
+netOffline
+.
+longDesc2
+is
+not
+defined
+-
+-
+>
+<
+!
+ENTITY
+netOffline
+.
+longDesc2
+"
+&
+netOffline
+.
+longDesc
+;
+"
+>
+<
+!
 ENTITY
 %
 globalDTD
@@ -3125,7 +3155,7 @@ ed_netOffline
 &
 netOffline
 .
-longDesc
+longDesc2
 ;
 <
 /
