Backed out changeset c06ef0414fee, bug 596762. a=me
UltraBlame original commit: 84a05bdabec5be7bacde12cccc92db17f4d54c5a

--- a/modules/plugin/test/mochitest/test_crashing.html
+++ b/modules/plugin/test/mochitest/test_crashing.html
@@ -134,13 +134,64 @@ frameLoaded_toCrash
 (
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+var
+prefs
+=
+Components
+.
+classes
+[
+'
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+'
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrefBranch
+)
+;
 if
 (
 !
-SimpleTest
+prefs
 .
-areOOPPenabled
+getBoolPref
 (
+'
+dom
+.
+ipc
+.
+plugins
+.
+enabled
+'
 )
 )
 {
