--- a/modules/plugin/test/mochitest/test_hanging.html
+++ b/modules/plugin/test/mochitest/test_hanging.html
@@ -134,42 +134,6 @@ frameLoaded_toCrash
 (
 )
 {
-if
-(
-!
-SimpleTest
-.
-areOOPPenabled
-(
-)
-)
-{
-ok
-(
-true
-"
-Skipping
-this
-test
-when
-IPC
-plugins
-are
-not
-enabled
-.
-"
-)
-;
-SimpleTest
-.
-finish
-(
-)
-;
-return
-;
-}
 netscape
 .
 security
@@ -212,6 +176,51 @@ interfaces
 nsIPrefBranch
 )
 ;
+if
+(
+!
+prefs
+.
+getBoolPref
+(
+'
+dom
+.
+ipc
+.
+plugins
+.
+enabled
+'
+)
+)
+{
+ok
+(
+true
+"
+Skipping
+this
+test
+when
+IPC
+plugins
+are
+not
+enabled
+.
+"
+)
+;
+SimpleTest
+.
+finish
+(
+)
+;
+return
+;
+}
 /
 /
 the
