--- a/modules/plugin/test/mochitest/test_GCrace.html
+++ b/modules/plugin/test/mochitest/test_GCrace.html
@@ -167,13 +167,64 @@ start
 (
 )
 {
+netscape
+.
+security
+.
+PrivilegeManager
+.
+enablePrivilege
+(
+'
+UniversalXPConnect
+'
+)
+;
+var
+prefs
+=
+Components
+.
+classes
+[
+'
+mozilla
+.
+org
+/
+preferences
+-
+service
+;
+1
+'
+]
+.
+getService
+(
+Components
+.
+interfaces
+.
+nsIPrefBranch
+)
+;
 if
 (
 !
-SimpleTest
+prefs
 .
-areOOPPenabled
+getBoolPref
 (
+'
+dom
+.
+ipc
+.
+plugins
+.
+enabled
+'
 )
 )
 {
