Bug 594767 - importNode fails when using a document created with createHTMLDocument, r=sicking, a=blocking
UltraBlame original commit: db645dab024fe279f1e92e573d98a940c0e1f41f

--- a/content/base/test/test_createHTMLDocument.html
+++ b/content/base/test/test_createHTMLDocument.html
@@ -508,6 +508,38 @@ title
 normalizedtitle
 )
 ;
+doc
+.
+body
+.
+innerHTML
+=
+"
+foo
+"
+;
+is
+(
+doc
+.
+body
+.
+innerHTML
+"
+foo
+"
+"
+innerHTML
+should
+work
+in
+HTML
+data
+documents
+!
+"
+)
+;
 }
 checkDoc
 (
