Bug 558036 - make HTML <output> accessible. r=MarcoZ,surkov a=davidb
UltraBlame original commit: d95e7b7cb3362f5372bead43539bb647f74aafcd

--- a/accessible/tests/mochitest/attributes/test_obj.html
+++ b/accessible/tests/mochitest/attributes/test_obj.html
@@ -422,6 +422,29 @@ true
 live
 object
 attribute
+/
+/
+HTML
+testAttrs
+(
+"
+output
+"
+{
+"
+live
+"
+:
+"
+polite
+"
+}
+true
+)
+;
+/
+/
+ARIA
 testAttrs
 (
 "
@@ -1300,6 +1323,52 @@ Bug
 a
 >
 <
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+558036
+"
+title
+=
+"
+make
+HTML
+<
+output
+>
+accessible
+"
+>
+Mozilla
+Bug
+558036
+<
+/
+a
+>
+<
 p
 id
 =
@@ -1655,6 +1724,18 @@ other
 <
 /
 div
+>
+<
+output
+id
+=
+"
+output
+"
+>
+<
+/
+output
 >
 <
 div
