--- a/accessible/tests/mochitest/relations/test_general.html
+++ b/accessible/tests/mochitest/relations/test_general.html
@@ -736,6 +736,51 @@ submit
 ;
 /
 /
+output
+'
+for
+'
+relations
+testRelation
+(
+"
+output
+"
+RELATION_CONTROLLED_BY
+[
+"
+input
+"
+"
+input2
+"
+]
+)
+;
+testRelation
+(
+"
+input
+"
+RELATION_CONTROLLER_FOR
+"
+output
+"
+)
+;
+testRelation
+(
+"
+input2
+"
+RELATION_CONTROLLER_FOR
+"
+output
+"
+)
+;
+/
+/
 '
 described
 by
@@ -970,6 +1015,52 @@ relations
 Mozilla
 Bug
 475298
+<
+/
+a
+>
+<
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+558036
+"
+title
+=
+"
+make
+HTML
+<
+output
+>
+accessible
+"
+>
+Mozilla
+Bug
+558036
 <
 /
 a
@@ -1795,6 +1886,11 @@ span
 >
 <
 form
+id
+=
+"
+form
+"
 >
 <
 input
@@ -1802,6 +1898,15 @@ id
 =
 "
 input
+"
+/
+>
+<
+input
+id
+=
+"
+input2
 "
 /
 >
@@ -1818,6 +1923,31 @@ id
 submit
 "
 /
+>
+<
+output
+id
+=
+"
+output
+"
+style
+=
+"
+display
+:
+block
+"
+for
+=
+"
+input
+input2
+"
+>
+<
+/
+output
 >
 <
 /
