--- a/accessible/tests/mochitest/tree/test_formctrl.html
+++ b/accessible/tests/mochitest/tree/test_formctrl.html
@@ -336,6 +336,31 @@ image_submit
 accTree
 )
 ;
+accTree
+=
+{
+role
+:
+ROLE_SECTION
+children
+:
+[
+{
+role
+:
+ROLE_TEXT_LEAF
+}
+]
+}
+;
+testAccessibleTree
+(
+"
+output
+"
+accTree
+)
+;
 SimpleTest
 .
 finish
@@ -472,6 +497,52 @@ Bug
 a
 >
 <
+a
+target
+=
+"
+_blank
+"
+href
+=
+"
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+558036
+"
+title
+=
+"
+make
+HTML
+<
+output
+>
+accessible
+"
+>
+Mozilla
+Bug
+558036
+<
+/
+a
+>
+<
 p
 id
 =
@@ -596,6 +667,19 @@ id
 "
 image_submit
 "
+>
+<
+output
+id
+=
+"
+output
+"
+>
+1337
+<
+/
+output
 >
 <
 /
