--- a/browser/base/content/tabview/tabview.html
+++ b/browser/base/content/tabview/tabview.html
@@ -260,6 +260,42 @@ text
 /
 >
 <
+div
+id
+=
+"
+otherresults
+"
+>
+<
+span
+class
+=
+"
+label
+"
+>
+<
+/
+span
+>
+<
+span
+id
+=
+"
+results
+"
+>
+<
+/
+span
+>
+<
+/
+div
+>
+<
 /
 div
 >
